--- a/SpacesForChildren/SpacesForChildren/Views/Account/Register.cshtml
+++ b/SpacesForChildren/SpacesForChildren/Views/Account/Register.cshtml
@@ -1,13 +1,13 @@
 ﻿@model SpacesForChildren.Models.RegisterViewModel
 @{
-    ViewBag.Title = "Register";
+    ViewBag.Title = "Registar";
 }
 
-<h2>@ViewBag.Title.</h2>
+<h2>@ViewBag.Title</h2>
 
 @using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" })) {
     @Html.AntiForgeryToken()
-    <h4>Create a new account.</h4>
+    <h4>Criar Nova Conta de Utilizador</h4>
     <hr />
     @Html.ValidationSummary("", new { @class = "text-danger" })
     <div class="form-group">
@@ -66,8 +66,8 @@
         </div>
     </div>
 
-
-    /*<div id="institution-register-forms">
+    /*
+    <div id="institution-register-forms">
         <div class="form-group">
             @Html.LabelFor(m => m.Name, new { @class = "col-md-2 control-label" })
             <div class="col-md-10">
@@ -85,12 +85,12 @@
             </div>
         </div>
     </div>
-
+    */
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
             <input type="submit" class="btn btn-default" value="Registar" />
         </div>
-    </div>*/
+    </div>
 }
 
 @section Scripts {
