--- a/SpacesForChildren/SpacesForChildren/Views/Institutions/Index.cshtml
+++ b/SpacesForChildren/SpacesForChildren/Views/Institutions/Index.cshtml
@@ -1,11 +1,38 @@
-﻿@model IEnumerable<SpacesForChildren.Models.Institution>
+﻿@using System.Web.UI.WebControls
+@model IEnumerable<SpacesForChildren.Models.Institution>
 
 @{
     ViewBag.Title = "Index";
 }
 
-<h2>Instituições</h2>
-
+<h3>Pesquisar</h3>
+@using (Html.BeginForm()) {
+    @Html.AntiForgeryToken()
+    <div class="form-group">
+        @Html.Label("Cidade", new { @class = "col-md-2 control-label" })
+        <div class="col-md-10">
+            @Html.DropDownList("CityListItems", null, new { @class = "form-control" })
+        </div>
+    </div>
+    <br/>
+    <br/>
+    <div class="form-group">
+        @Html.Label("Ranking", new { @class = "col-md-2 control-label" })
+        <div class="col-md-10">
+            @Html.DropDownList("RankingListItems", null, new { @class = "form-control" })
+        </div>
+    </div>
+    <br/>
+    <br/>
+    <div class="form-group">
+        <div class="col-md-offset-2 col-md-10">
+            <input type="submit" class="btn btn-default" value="Pesquisar" />
+        </div>
+    </div>
+    <br/>
+    <hr/>
+}
+<h3>Instituições</h3>
 <table class="table">
     <tr>
         <th>
@@ -27,55 +54,45 @@
             @Html.DisplayNameFor(model => model.PhoneNumber)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Description)
-        </th>
-        <th>
             @Html.DisplayNameFor(model => model.IsApproved)
         </th>
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Type)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Address)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.City)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Email)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.PhoneNumber)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Description)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.IsApproved)
-        </td>
-        @if (User.Identity.Name.Equals("Admin"))
-        {
+    @foreach (var item in Model) {
+        <tr>
             <td>
-                @Html.ActionLink("Editar", "Edit", new {id = item.Id}) |
-                @Html.ActionLink("Detalhes", "Details", new {id = item.Id}) |
+                @Html.DisplayFor(modelItem => item.Name)
             </td>
-        }
-        else
-        {
+            <td>
+                @Html.DisplayFor(modelItem => item.Type)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Address)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.City)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Email)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.PhoneNumber)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.IsApproved)
+            </td>
+            @if (User.Identity.Name.Equals("Admin")) {
+                <td>
+                    @Html.ActionLink("Editar", "Edit", new { id = item.Id }) |
+                    @Html.ActionLink("Mais Informações", "Details", new { id = item.Id }) |
+                </td>
+            }
             <td>
                 @Html.ActionLink("Detalhes", "Details", new { id = item.Id })
             </td>
-        }
 
-    </tr>
-}
+        </tr>
+    }
 
 </table>
