--- a/SpacesForChildren/SpacesForChildren/Views/Shared/_Layout.cshtml
+++ b/SpacesForChildren/SpacesForChildren/Views/Shared/_Layout.cshtml
@@ -22,13 +22,21 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Instituições","Index","Institutions")</li>
-                    @if (User.IsInRole("Pai"))
-                    {
-                    <li>@Html.ActionLink("Filho", "Index", "Children")</li>
-                    }
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("Instituições", "Index", "Institutions")</li>
+           @if (User.IsInRole("Pai")) 
+           {
+                <li>@Html.ActionLink("Filhos", "Index", "Children")</li>
+                <li>@Html.ActionLink("Filhos", "Index", "Children")</li>
+           }
+           @if (User.IsInRole("Instituição")) 
+           {
+                <li>@Html.ActionLink("Contratos", "Index", "Contracts")</li>
+                <li>@Html.ActionLink("Crianças", "Index", "Children")</li>
+               <li>@Html.ActionLink("Atividades", "Index", "Children")</li>
+               <li>@Html.ActionLink("Pedidos", "Index", "RequestInfoes")</li>
+           }
+                    <li>@Html.ActionLink("Sobre nós", "About", "Home")</li>
+                    <li>@Html.ActionLink("Contactos", "Contact", "Home")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
