--- a/SpacesForChildren/SpacesForChildren/Views/Children/Details.cshtml
+++ b/SpacesForChildren/SpacesForChildren/Views/Children/Details.cshtml
@@ -45,6 +45,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Editar", "Edit", new { id = Model.Id }) |
+    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
     @Html.ActionLink("Back to List", "Index")
 </p>
