Create Child Required Dropped

--- a/SpacesForChildren/SpacesForChildren/Views/Children/Create.cshtml
+++ b/SpacesForChildren/SpacesForChildren/Views/Children/Create.cshtml
@@ -4,15 +4,15 @@
     ViewBag.Title = "Create";
 }
 
-<h2>Create</h2>
+<h2>Adicionar Filho</h2>
 
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm("Create","Children")) 
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Child</h4>
+        <h4>Registo de Filho</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
@@ -40,10 +40,9 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.ParentId, "ParentId", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.Label("Nome do Pai", new { @class = "col-md-2 control-label" })
             <div class="col-md-10">
-                @Html.DropDownList("ParentId", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.ParentId, "", new { @class = "text-danger" })
+                @Html.TextBox("ParentName",(string)ViewBag.ParentName, new { @class = "form-control", @readonly = "readonly"})
             </div>
         </div>
 
