--- a/SpacesForChildren/SpacesForChildren/Views/Account/Register.cshtml
+++ b/SpacesForChildren/SpacesForChildren/Views/Account/Register.cshtml
@@ -84,7 +84,7 @@
     </div>
 
 
-    <div id="parent-register-forms">
+    <div id="parent-register-forms" style="display: none">
         <div class="form-group">
             @Html.LabelFor(m => m.Gender, new { @class = "col-md-2 control-label" })
             <div class="col-md-10">
@@ -94,7 +94,7 @@
         </div>
     </div>
     
-    <div class="form-group">
+    <div class="form-group" style="display: none">
         <div class="col-md-offset-2 col-md-10">
             <input type="submit" class="btn btn-default" value="Registar" />
         </div>
