--- a/SpacesForChildren/SpacesForChildren/Views/Services/Details.cshtml
+++ b/SpacesForChildren/SpacesForChildren/Views/Services/Details.cshtml
@@ -4,10 +4,9 @@
     ViewBag.Title = "Details";
 }
 
-<h2>Details</h2>
+<h2>Detalhes do Serviço</h2>
 
 <div>
-    <h4>Service</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -42,17 +41,9 @@
             @Html.DisplayFor(model => model.MaxAgeYear)
         </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Price)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Price)
-        </dd>
-
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Editar", "Edit", new { id = Model.Id }) |
+    @Html.ActionLink("Voltar", "Index")
 </p>
