--- a/SpacesForChildren/SpacesForChildren/Views/Services/Index.cshtml
+++ b/SpacesForChildren/SpacesForChildren/Views/Services/Index.cshtml
@@ -7,7 +7,7 @@
 <h2>Index</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Criar Novo Serviço", "Create")
 </p>
 <table class="table">
     <tr>
@@ -22,9 +22,6 @@
         </th>
         <th>
             @Html.DisplayNameFor(model => model.MaxAgeYear)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Price)
         </th>
         <th></th>
     </tr>
@@ -44,12 +41,12 @@
             @Html.DisplayFor(modelItem => item.MaxAgeYear)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.Price)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
+            @Html.ActionLink("Editar", "Edit", new { id=item.Id }) |
+            @Html.ActionLink("Detalhes", "Details", new { id=item.Id }) |
+            @if (User.IsInRole("Administrador"))
+            {
+                @Html.ActionLink("Eliminar", "Delete", new { id=item.Id })
+            }            
         </td>
     </tr>
 }
