--- a/SpacesForChildren/SpacesForChildren/Views/Contracts/Edit.cshtml
+++ b/SpacesForChildren/SpacesForChildren/Views/Contracts/Edit.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Edit";
 }
 
-<h2>Edit</h2>
+<h2>Editar Contrato</h2>
 
 
 @using (Html.BeginForm())
@@ -76,7 +76,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Voltar", "Index")
 </div>
 
 @section Scripts {
