--- a/SpacesForChildren/SpacesForChildren/Views/Home/Index.cshtml
+++ b/SpacesForChildren/SpacesForChildren/Views/Home/Index.cshtml
@@ -1,31 +1,40 @@
 ﻿@{
     ViewBag.Title = "Home Page";
 }
+<img src="https://www.activecentres.org/media/medialibrary/2013/12/CrechePage.jpg" alt="Spaces4Children Photo" />
 
 <div class="jumbotron">
-    <h1>Spaces For Children</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <h1>Spaces4Children</h1>
+    <p class="lead">Descubra onde deixar a sua criança a crescer em tamanho, alma e coração.</p>
 </div>
 
 <div class="row">
     <div class="col-md-4">
-        <h2>Getting started</h2>
+        <h2>Onde deixar o meu filho?</h2>
         <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
+            Registe-se e procure a instituição a seu gosto,
         </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+        <p>
+            @Html.ActionLink("Instituições", "Index", "Institutions")
+        </p>
     </div>
     <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
+        <h2>Onde começar?</h2>
+        <p>
+             O primeiro passo passará por registar uma nova conta, click no link abaixo
+        </p>
+        <p>
+            @Html.ActionLink("Registar-me", "Register", "Account")
+        </p>
     </div>
     <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+        <h2>Como funciona o site? </h2>
+        <p>
+            Estamos disponíveis para responder a qualquer tipo de questões, para mais informações
+            contacte-nos
+        </p>
+        <p>
+            @Html.ActionLink("Contactos", "Contact", "Home")
+        </p>
     </div>
 </div>
