--- a/SpacesForChildren/SpacesForChildren/Views/Institutions/Index.cshtml
+++ b/SpacesForChildren/SpacesForChildren/Views/Institutions/Index.cshtml
@@ -82,14 +82,13 @@
             <td>
                 @Html.DisplayFor(modelItem => item.IsApproved)
             </td>
-            @if (User.Identity.Name.Equals("Admin")) {
+            @if (User.IsInRole("Administrador")) {
                 <td>
                     @Html.ActionLink("Editar", "Edit", new { id = item.Id }) |
-                    @Html.ActionLink("Mais Informações", "Details", new { id = item.Id }) |
+                    @Html.ActionLink("Eliminar", "Delete", new { id = item.Id }) | 
                 </td>
             }
-            <td>
-                @Html.ActionLink("Detalhes", "Details", new { id = item.Id })
+            <td> @Html.ActionLink("Descrição", "Details", new { id = item.Id }) 
             </td>
 
         </tr>
