--- a/SpacesForChildren/SpacesForChildren/Views/Parents/Delete.cshtml
+++ b/SpacesForChildren/SpacesForChildren/Views/Parents/Delete.cshtml
@@ -4,11 +4,10 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete</h2>
+<h2>Eliminar Pai</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Tem a certeza que pretende elimiar este Utilizador?</h3>
 <div>
-    <h4>Parent</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
