--- a/SpacesForChildren/SpacesForChildren/Views/Parents/Details.cshtml
+++ b/SpacesForChildren/SpacesForChildren/Views/Parents/Details.cshtml
@@ -4,10 +4,9 @@
     ViewBag.Title = "Details";
 }
 
-<h2>Details</h2>
+<h2>Descrição do Utilizador</h2>
 
 <div>
-    <h4>Parent</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
