--- a/SpacesForChildren/SpacesForChildren/Views/RequestInfoes/Delete.cshtml
+++ b/SpacesForChildren/SpacesForChildren/Views/RequestInfoes/Delete.cshtml
@@ -4,11 +4,10 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete</h2>
+<h2>Apagar Pedido</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Tem a certeza que pretence eliminar o Pedido?</h3>
 <div>
-    <h4>RequestInfo</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -66,7 +65,7 @@
 
         <div class="form-actions no-color">
             <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            @Html.ActionLink("Voltar", "Index")
         </div>
     }
 </div>
