--- a/SpacesForChildren/SpacesForChildren/Views/RequestInfoes/Index.cshtml
+++ b/SpacesForChildren/SpacesForChildren/Views/RequestInfoes/Index.cshtml
@@ -4,28 +4,37 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<h2>Pedidos</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Fazer Novo Pedido", "Create")
 </p>
 <table class="table">
     <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Institution.Name)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Parent.Name)
-        </th>
+        @if (User.IsInRole("Pai"))
+        {
+            <th>
+                @Html.DisplayNameFor(model => model.Institution.Name)
+            </th>
+        }
+        @if (User.IsInRole("Instituição"))
+        {
+            <th>
+                @Html.DisplayNameFor(model => model.Parent.Name)
+            </th>
+        }
         <th>
             @Html.DisplayNameFor(model => model.Title)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Text)
         </th>
-        <th>
-            @Html.DisplayNameFor(model => model.IsAnswered)
-        </th>
+        @if (User.IsInRole("Instituição"))
+        {
+            <th>
+                @Html.DisplayNameFor(model => model.IsAnswered)
+            </th>
+        }
         <th>
             @Html.DisplayNameFor(model => model.Answer)
         </th>
@@ -34,28 +43,44 @@
 
 @foreach (var item in Model) {
     <tr>
+    @if (User.IsInRole("Pai"))
+    {
         <td>
             @Html.DisplayFor(modelItem => item.Institution.Name)
         </td>
+    }
+    @if (User.IsInRole("Instituição"))
+    {
         <td>
             @Html.DisplayFor(modelItem => item.Parent.Name)
         </td>
+    }
         <td>
             @Html.DisplayFor(modelItem => item.Title)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Text)
         </td>
+    @if (User.IsInRole("Instituição"))
+    {
         <td>
             @Html.DisplayFor(modelItem => item.IsAnswered)
         </td>
+    }
         <td>
             @Html.DisplayFor(modelItem => item.Answer)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
+        @if (!User.IsInRole("Pai"))
+        {
+            @Html.ActionLink("Editar", "Edit", new {id = item.Id})
+        }
+            @Html.ActionLink("Detalhes", "Details", new {id = item.Id})
+
+        @if (User.IsInRole("Administrador"))
+        {
+            @Html.ActionLink("Eliminar", "Delete", new {id = item.Id})
+        }
         </td>
     </tr>
 }
