--- a/SpacesForChildren/SpacesForChildren/Views/Services/Delete.cshtml
+++ b/SpacesForChildren/SpacesForChildren/Views/Services/Delete.cshtml
@@ -4,11 +4,10 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete</h2>
+<h2>Eliminar Serviço</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Tem a certeza que pretende eliminar o serviço?</h3>
 <div>
-    <h4>Service</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -43,14 +42,6 @@
             @Html.DisplayFor(model => model.MaxAgeYear)
         </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Price)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Price)
-        </dd>
-
     </dl>
 
     @using (Html.BeginForm()) {
@@ -58,7 +49,7 @@
 
         <div class="form-actions no-color">
             <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            @Html.ActionLink("Voltar", "Index")
         </div>
     }
 </div>
