--- a/SpacesForChildren/SpacesForChildren/Views/Home/About.cshtml
+++ b/SpacesForChildren/SpacesForChildren/Views/Home/About.cshtml
@@ -1,7 +1,8 @@
 ﻿@{
-    ViewBag.Title = "About";
+    ViewBag.Title = "Quem Somos";
 }
 <h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
 
-<p>Use this area to provide additional information.</p>
+<p>Trabalho realizado por </p>
+<p>Rafael Henriques a21250203</p>
+<p>Rui Teixeira a21250189</p>
