--- a/SpacesForChildren/SpacesForChildren/Views/Shared/_Layout.cshtml
+++ b/SpacesForChildren/SpacesForChildren/Views/Shared/_Layout.cshtml
@@ -33,7 +33,7 @@
            {
                 <li>@Html.ActionLink("Contratos", "Index", "Contracts")</li>
                 <li>@Html.ActionLink("Crianças", "Index", "Children")</li>
-                <li>@Html.ActionLink("Atividades", "Index", "Children")</li>
+                <li>@Html.ActionLink("Atividades", "Index", "Activities")</li>
                 <li>@Html.ActionLink("Pedidos", "Index", "RequestInfoes")</li>
                 <li>@Html.ActionLink("Serviços", "Index", "Services")</li>
            }
