--- a/SpacesForChildren/SpacesForChildren/Views/Account/Register.cshtml
+++ b/SpacesForChildren/SpacesForChildren/Views/Account/Register.cshtml
@@ -94,9 +94,9 @@
         </div>
     </div>
     
-    <div class="form-group" style="display: none">
+    <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" class="btn btn-default" value="Registar" />
+            <input type="submit" value="Registar" class="btn btn-default" />
         </div>
     </div>
 
