--- a/SpacesForChildren/SpacesForChildren/Views/Activities/Delete.cshtml
+++ b/SpacesForChildren/SpacesForChildren/Views/Activities/Delete.cshtml
@@ -6,9 +6,8 @@
 
 <h2>Delete</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Tem a certeza que pretande eliminar a Atividade?</h3>
 <div>
-    <h4>Activity</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
