--- a/SpacesForChildren/SpacesForChildren/Views/Activities/Index.cshtml
+++ b/SpacesForChildren/SpacesForChildren/Views/Activities/Index.cshtml
@@ -1,19 +1,18 @@
 ﻿@model IEnumerable<SpacesForChildren.Models.Activity>
-
 @{
     ViewBag.Title = "Index";
 }
-
-<h2>Index</h2>
-
+<h2>Atividades</h2>
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Criar Atividade", "Create")
 </p>
 <table class="table">
     <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Institution.Name)
-        </th>
+        @if (!User.IsInRole("Instituição")) {
+            <th>
+                @Html.DisplayNameFor(model => model.Institution.Name)
+            </th>
+        }
         <th>
             @Html.DisplayNameFor(model => model.Name)
         </th>
@@ -25,27 +24,28 @@
         </th>
         <th></th>
     </tr>
-
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Institution.Name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Date)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Description)
-        </td>
-        <td>
-            @Html.ActionLink("Editar", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Detalhes", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Eliminar", "Delete", new { id=item.Id })
-        </td>
-    </tr>
+    @foreach (var item in Model) {
+        <tr>
+            @if (!User.IsInRole("Instituição")) {
+                <td>
+                    @Html.DisplayFor(modelItem => item.Institution.Name)
+                </td>
+            }
+            <td>
+                @Html.DisplayFor(modelItem => item.Name)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Date)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Description)
+            </td>
+            <td>
+                @if (User.IsInRole("Instituição") || User.IsInRole("Administrador")) {
+                    @Html.ActionLink("Editar", "Edit", new { id = item.Id }) <span> | </span>
+                    @Html.ActionLink("Eliminar", "Delete", new {id = item.Id})
+                }
+            </td>
+        </tr>
 }
-
 </table>
