--- a/SpacesForChildren/SpacesForChildren/Views/Children/Details.cshtml
+++ b/SpacesForChildren/SpacesForChildren/Views/Children/Details.cshtml
@@ -4,10 +4,9 @@
     ViewBag.Title = "Details";
 }
 
-<h2>Details</h2>
+<h2>Descrição da Criança</h2>
 
 <div>
-    <h4>Child</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -45,6 +44,5 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Editar", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Voltar", "Index")
 </p>
