--- a/SpacesForChildren/SpacesForChildren/Views/Children/Index.cshtml
+++ b/SpacesForChildren/SpacesForChildren/Views/Children/Index.cshtml
@@ -1,10 +1,8 @@
 ﻿@model IEnumerable<SpacesForChildren.Models.Child>
-
 @{
     ViewBag.Title = "Index";
 }
-@if (User.IsInRole("Pai"))
-{
+@if (User.IsInRole("Pai")) {
     <h2>As minhas crianças</h2>
 
     <p>
@@ -23,7 +21,6 @@
             </th>
             <th></th>
         </tr>
-
         @foreach (var item in Model) {
             <tr>
                 <td>
@@ -36,16 +33,21 @@
                     @Html.DisplayFor(modelItem => item.DateOfBirth)
                 </td>
                 <td>
-                    @Html.ActionLink("Detalhes", "Details", new { id=item.Id }) |
-                    @Html.ActionLink("Remover", "Delete", new { id=item.Id })
+                    @Html.ActionLink("Detalhes", "Details", new { id = item.Id }) |
+                    @Html.ActionLink("Remover", "Delete", new { id = item.Id })
                 </td>
             </tr>
         }
     </table>
 }
-else if(User.IsInRole("Instituição"))
-{
-    <h2>Crianças na Instituição</h2>
+else if (User.IsInRole("Instituição") || User.IsInRole("Administrador")) {
+
+    if (User.IsInRole("Instituição")) {
+        <h2>Crianças na Instituição</h2>
+    }
+    else {
+        <h2>Crianças</h2>
+    }
 
     <table class="table">
         <tr>
@@ -63,7 +65,6 @@ else if(User.IsInRole("Instituição"))
             </th>
             <th></th>
         </tr>
-
         @foreach (var item in Model) {
             <tr>
                 <td>
@@ -78,13 +79,14 @@ else if(User.IsInRole("Instituição"))
                 <td>
                     @Html.DisplayFor(modelItem => item.DateOfBirth)
                 </td>
-                <td>                
-                    @Html.ActionLink("Detalhes", "Details", new { id=item.Id })
-              
+                <td>
+                    @Html.ActionLink("Detalhes", "Details", new {id = item.Id})
+                    @if (User.IsInRole("Administrador")) 
+                    {
+                        @Html.ActionLink("Eliminar", "Delete", new { id = item.Id })
+                    }
                 </td>
             </tr>
         }
-
     </table>
 }
-
