--- a/SpacesForChildren/SpacesForChildren/Views/Contracts/Index.cshtml
+++ b/SpacesForChildren/SpacesForChildren/Views/Contracts/Index.cshtml
@@ -1,25 +1,27 @@
 ﻿@model IEnumerable<SpacesForChildren.Models.Contract>
-
 @{
     ViewBag.Title = "Index";
 }
-
 <h2>Contratos</h2>
-
-<p>
-    @Html.ActionLink("Criar Novo Contrato", "Create")
-</p>
+@if (!User.IsInRole("Pai")) {
+    <p>
+        @Html.ActionLink("Criar Novo Contrato", "mainCreate")
+    </p>
+}
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.Child.Name)
+            @Html.DisplayName("Criança")
         </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Parent.Name)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Review.Title)
-        </th>
+        @if (!User.IsInRole("Pai")) {
+            <th>
+                @Html.DisplayName("Pai")
+            </th>
+        }
+        @*<th>
+                @Html.DisplayNameFor(model => model.Review.Title)
+            </th>
+        *@
         <th>
             @Html.DisplayNameFor(model => model.InitialDate)
         </th>
@@ -27,37 +29,47 @@
             @Html.DisplayNameFor(model => model.EndDate)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.IsApproved)
+            @Html.DisplayNameFor(model => model.Approvation)
         </th>
         <th></th>
     </tr>
+    @foreach (var item in Model) {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Child.Name)
+            </td>
+            @if (!User.IsInRole("Pai")) {
+                <td>
+                    @Html.DisplayFor(modelItem => item.Parent.Name)
+                </td>
+            }
+            @*
+                <td>
+                    @Html.DisplayFor(modelItem => item.Review.Title)
+                </td>
+            *@
+            <td>
+                @Html.DisplayFor(modelItem => item.InitialDate)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.EndDate)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Approvation)
+            </td>
+            <td>
+                @if (User.IsInRole("Administrador")) {
+                    @Html.ActionLink("Editar", "Edit", new { id = item.Id })
+                }
+                @if (User.IsInRole("Pai") && item.Approvation.Equals("Aguardando Aprovação")) {
+                    @Html.ActionLink("Aceitar", "AcceptContract", new { id = item.Id })
+                    @Html.ActionLink("Recusar", "RefuseContract", new { id = item.Id })
+                }
+                @if (User.IsInRole("Administrador")) {
+                    @Html.ActionLink("Eliminar", "Delete", new { id = item.Id })
+                }
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Child.Name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Parent.Name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Review.Title)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.InitialDate)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.EndDate)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.IsApproved)
-        </td>
-        <td>
-            @Html.ActionLink("Editar", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Descrição", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Eliminar", "Delete", new { id=item.Id })
-        </td>
-    </tr>
-}
-
+            </td>
+        </tr>
+    }
 </table>
