--- a/SpacesForChildren/SpacesForChildren/Views/Institutions/Index.cshtml
+++ b/SpacesForChildren/SpacesForChildren/Views/Institutions/Index.cshtml
@@ -1,10 +1,8 @@
 ﻿@using System.Web.UI.WebControls
 @model IEnumerable<SpacesForChildren.Models.Institution>
-
 @{
     ViewBag.Title = "Index";
 }
-
 <h3>Pesquisar</h3>
 @using (Html.BeginForm()) {
     @Html.AntiForgeryToken()
@@ -14,23 +12,23 @@
             @Html.DropDownList("CityListItems", null, new { @class = "form-control" })
         </div>
     </div>
-    <br/>
-    <br/>
+    <br />
+    <br />
     <div class="form-group">
         @Html.Label("Ranking", new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
             @Html.DropDownList("RankingListItems", null, new { @class = "form-control" })
         </div>
     </div>
-    <br/>
-    <br/>
+    <br />
+    <br />
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
             <input type="submit" class="btn btn-default" value="Pesquisar" />
         </div>
     </div>
-    <br/>
-    <hr/>
+    <br />
+    <hr />
 }
 <h3>Instituições</h3>
 <table class="table">
@@ -58,7 +56,6 @@
         </th>
         <th></th>
     </tr>
-
     @foreach (var item in Model) {
         <tr>
             <td>
@@ -85,13 +82,12 @@
             @if (User.IsInRole("Administrador")) {
                 <td>
                     @Html.ActionLink("Editar", "Edit", new { id = item.Id }) |
-                    @Html.ActionLink("Eliminar", "Delete", new { id = item.Id }) | 
+                    @Html.ActionLink("Eliminar", "Delete", new { id = item.Id }) |
                 </td>
             }
-            <td> @Html.ActionLink("Descrição", "Details", new { id = item.Id }) 
+            <td>
+                @Html.ActionLink("Descrição", "Details", new { id = item.Id })
             </td>
-
         </tr>
     }
-
 </table>
