--- a/SpacesForChildren/SpacesForChildren/Views/Activities/Index.cshtml
+++ b/SpacesForChildren/SpacesForChildren/Views/Activities/Index.cshtml
@@ -10,7 +10,7 @@
     <tr>
         @if (!User.IsInRole("Instituição")) {
             <th>
-                @Html.DisplayNameFor(model => model.Institution.Name)
+                @Html.DisplayName("Instituição")
             </th>
         }
         <th>
