--- a/SpacesForChildren/SpacesForChildren/Views/Home/About.cshtml
+++ b/SpacesForChildren/SpacesForChildren/Views/Home/About.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     ViewBag.Title = "Quem Somos";
 }
-<h2>@ViewBag.Title.</h2>
+<h2>@ViewBag.Title</h2>
 
 <p>Trabalho realizado por </p>
 <p>Rafael Henriques a21250203</p>
