--- a/SpacesForChildren/SpacesForChildren/Views/Account/Login.cshtml
+++ b/SpacesForChildren/SpacesForChildren/Views/Account/Login.cshtml
@@ -3,28 +3,28 @@
 @{
     ViewBag.Title = "Log in";
 }
-
 <h2>Log In</h2>
 <div class="row">
     <div class="col-md-8">
         <section id="loginForm">
-            @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+            <p style="color: red">@ViewBag.Message</p>
+            @using (Html.BeginForm("Login", "Account", new {ReturnUrl = ViewBag.ReturnUrl}, FormMethod.Post, new {@class = "form-horizontal", role = "form"}))
             {
                 @Html.AntiForgeryToken()
-                <hr />
-                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                <hr/>
+                @Html.ValidationSummary(true, "", new {@class = "text-danger"})
                 <div class="form-group">
-                    @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
+                    @Html.LabelFor(m => m.Email, new {@class = "col-md-2 control-label"})
                     <div class="col-md-10">
-                        @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
-                        @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
+                        @Html.TextBoxFor(m => m.Email, new {@class = "form-control"})
+                        @Html.ValidationMessageFor(m => m.Email, "", new {@class = "text-danger"})
                     </div>
                 </div>
                 <div class="form-group">
-                    @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
+                    @Html.LabelFor(m => m.Password, new {@class = "col-md-2 control-label"})
                     <div class="col-md-10">
-                        @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
-                        @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
+                        @Html.PasswordFor(m => m.Password, new {@class = "form-control"})
+                        @Html.ValidationMessageFor(m => m.Password, "", new {@class = "text-danger"})
                     </div>
                 </div>
                 <div class="form-group">
@@ -37,9 +37,21 @@
                 </div>
                 <div class="form-group">
                     <div class="col-md-offset-2 col-md-10">
-                        <input type="submit" value="Conectar" class="btn btn-default" />
+                        <input type="submit" value="Conectar" class="btn btn-default"/>
                     </div>
                 </div>
+
+                if (ViewBag.Message != null)
+                {
+
+                    <script>
+                        $(document).ready(function() {
+
+                            alert('@ViewBag.Message');
+
+                        });
+                    </script>
+                }
                 <p>
                     @Html.ActionLink("Registar novo Utilizador", "Register")
                 </p>
@@ -51,14 +63,13 @@
         </section>
     </div>
     @*
-    <div class="col-md-4">
-        <section id="socialLoginForm">
-            @Html.Partial("_ExternalLoginsListPartial", new ExternalLoginListViewModel { ReturnUrl = ViewBag.ReturnUrl })
-        </section>
-    </div>
+        <div class="col-md-4">
+            <section id="socialLoginForm">
+                @Html.Partial("_ExternalLoginsListPartial", new ExternalLoginListViewModel { ReturnUrl = ViewBag.ReturnUrl })
+            </section>
+        </div>
     *@
 </div>
-
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
 }
