--- a/SpacesForChildren/SpacesForChildren/Views/Contracts/Create.cshtml
+++ b/SpacesForChildren/SpacesForChildren/Views/Contracts/Create.cshtml
@@ -4,8 +4,8 @@
 }
 <h2>Criar Contrato</h2>
 
-@using (Html.BeginForm("Create", "Contracts")) {
-    @Html.AntiForgeryToken()
+@using (Html.BeginForm("CreateContract", "Contracts", FormMethod.Get)) {
+    //@Html.AntiForgeryToken()
 
     <div class="form-horizontal">
         <hr />
@@ -36,6 +36,7 @@
             </div>
         }
         @if (User.IsInRole("Instituição") || User.IsInRole("Administrador")) {
+            
             <div class="form-group" style="display:none">
                 @Html.LabelFor(model => model.ParentId, "Pai", htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
@@ -46,6 +47,7 @@
                     @Html.ValidationMessageFor(model => model.ParentId, "", new { @class = "text-danger" })
                 </div>
             </div>
+            
             /*
             <div class="form-group">
                 @Html.LabelFor(model => model.ParentId, "Pai", htmlAttributes: new { @class = "control-label col-md-2" })
