--- a/SpacesForChildren/SpacesForChildren/Views/Institutions/Details.cshtml
+++ b/SpacesForChildren/SpacesForChildren/Views/Institutions/Details.cshtml
@@ -1,90 +1,73 @@
 ﻿@model SpacesForChildren.Models.Institution
-
 @{
     ViewBag.Title = "Details";
 }
-
 <h2>Descrição da Instuição</h2>
-
 <div>
     <hr />
     <dl class="dl-horizontal">
         <dt>
             @Html.DisplayNameFor(model => model.Name)
         </dt>
-
         <dd>
             @Html.DisplayFor(model => model.Name)
         </dd>
-
         <dt>
             @Html.DisplayNameFor(model => model.NIF)
         </dt>
-
         <dd>
             @Html.DisplayFor(model => model.NIF)
         </dd>
-
         <dt>
             @Html.DisplayNameFor(model => model.Address)
         </dt>
-
         <dd>
             @Html.DisplayFor(model => model.Address)
         </dd>
-
         <dt>
             @Html.DisplayNameFor(model => model.City)
         </dt>
-
         <dd>
             @Html.DisplayFor(model => model.City)
         </dd>
-
         <dt>
             @Html.DisplayNameFor(model => model.Email)
         </dt>
-
         <dd>
             @Html.DisplayFor(model => model.Email)
         </dd>
-
         <dt>
             @Html.DisplayNameFor(model => model.PhoneNumber)
         </dt>
-
         <dd>
             @Html.DisplayFor(model => model.PhoneNumber)
         </dd>
 
-
         <dt>
             @Html.DisplayNameFor(model => model.Type)
         </dt>
-
         <dd>
             @Html.DisplayFor(model => model.Type)
         </dd>
-
         <dt>
             @Html.DisplayNameFor(model => model.Description)
         </dt>
-
         <dd>
             @Html.DisplayFor(model => model.Description)
         </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.IsApproved)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.IsApproved)
-        </dd>
-
+        @if (User.IsInRole("Administrador") || User.IsInRole("Instituição")) {
+            <dt>
+                @Html.DisplayNameFor(model => model.IsApproved)
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.IsApproved)
+            </dd>
+        }
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Editar", "Edit", new { id = Model.Id }) |
+    @if (User.IsInRole("Administrador")) {
+        @Html.ActionLink("Editar", "Edit", new { id = Model.Id })
+    }
     @Html.ActionLink("Voltar", "Index")
 </p>
