--- a/SpacesForChildren/SpacesForChildren/Views/Contracts/Create.cshtml
+++ b/SpacesForChildren/SpacesForChildren/Views/Contracts/Create.cshtml
@@ -4,8 +4,8 @@
 }
 <h2>Criar Contrato</h2>
 
-@using (Html.BeginForm("CreateContract", "Contracts", FormMethod.Get)) {
-    //@Html.AntiForgeryToken()
+@using (Html.BeginForm("Create", "Contracts", FormMethod.Post)) {
+    @Html.AntiForgeryToken()
 
     <div class="form-horizontal">
         <hr />
@@ -17,13 +17,15 @@
                 @Html.ValidationMessageFor(model => model.InitialDate, "", new { @class = "text-danger" })
             </div>
         </div>
-        <div class="form-group">
-            @Html.LabelFor(model => model.EndDate, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.EndDate, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.EndDate, "", new { @class = "text-danger" })
+        @*
+            <div class="form-group">
+                @Html.LabelFor(model => model.EndDate, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.EndDate, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.EndDate, "", new { @class = "text-danger" })
+                </div>
             </div>
-        </div>
+        *@
         @if (User.IsInRole("Pai") || User.IsInRole("Administrador")) {
             <div class="form-group">
                 @Html.LabelFor(model => model.Approvation, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -36,7 +38,7 @@
             </div>
         }
         @if (User.IsInRole("Instituição") || User.IsInRole("Administrador")) {
-            
+
             <div class="form-group" style="display:none">
                 @Html.LabelFor(model => model.ParentId, "Pai", htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
@@ -47,7 +49,7 @@
                     @Html.ValidationMessageFor(model => model.ParentId, "", new { @class = "text-danger" })
                 </div>
             </div>
-            
+
             /*
             <div class="form-group">
                 @Html.LabelFor(model => model.ParentId, "Pai", htmlAttributes: new { @class = "control-label col-md-2" })
@@ -105,6 +107,13 @@
                 </div>
             </div>
         }
+        <div class="form-group">
+            @Html.LabelFor(model => model.ServiceId, "Serviços", htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.DropDownList("ServiceId", null, htmlAttributes: new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.ServiceId, "", new { @class = "text-danger" })
+            </div>
+        </div>
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
