--- a/SpacesForChildren/SpacesForChildren/Views/Contracts/Edit.cshtml
+++ b/SpacesForChildren/SpacesForChildren/Views/Contracts/Edit.cshtml
@@ -34,11 +34,11 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.IsApproved, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Approvation, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 <div class="checkbox">
-                    @Html.EditorFor(model => model.IsApproved)
-                    @Html.ValidationMessageFor(model => model.IsApproved, "", new { @class = "text-danger" })
+                    @Html.EditorFor(model => model.Approvation)
+                    @Html.ValidationMessageFor(model => model.Approvation, "", new { @class = "text-danger" })
                 </div>
             </div>
         </div>
