--- a/SpacesForChildren/SpacesForChildren/Views/Institutions/Index.cshtml
+++ b/SpacesForChildren/SpacesForChildren/Views/Institutions/Index.cshtml
@@ -67,39 +67,42 @@
         <th></th>
     </tr>
     @foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Type)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Address)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.City)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Email)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.PhoneNumber)
-            </td>
-            @if (User.IsInRole("Administrador")) {
-                <td>
-                    @Html.DisplayFor(modelItem => item.IsApproved)
-                </td>
-            }
-            @if (User.IsInRole("Administrador")) {
-                <td>
-                    @Html.ActionLink("Editar", "Edit", new { id = item.Id }) |
-                    @Html.ActionLink("Eliminar", "Delete", new { id = item.Id }) |
-                </td>
-            }
-            <td>
-                @Html.ActionLink("Descrição", "Details", new { id = item.Id })
-            </td>
-        </tr>
+    <tr>
+        <td>
+            @Html.DisplayFor(modelItem => item.Name)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Type)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Address)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.City)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Email)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.PhoneNumber)
+        </td>
+        @if (User.IsInRole("Administrador")) {
+        <td>
+            @Html.DisplayFor(modelItem => item.IsApproved)
+        </td>
+}
+        @if (User.IsInRole("Administrador")) {
+        <td>
+            @Html.ActionLink("Editar", "Edit", new { id = item.Id }) |
+            @Html.ActionLink("Eliminar", "Delete", new { id = item.Id }) |
+        </td>
+}
+        <td>
+            @Html.ActionLink("Descrição", "Details", new { id = item.Id })
+        </td>
+        <td>
+            @Html.ActionLink("Avaliações", "Index", "Reviews",null, new { id = item.Id })
+        </td>
+    </tr>
     }
 </table>
